--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 django>=5.2.8
 fastapi>=0.95
-uvicorn[standard]>=1.5
+uvicorn[standard]>=0.5
 pandas>=2.0
 numpy>=1.25
 streamlit>=1.25
 python-dotenv>=1.0
+mysqlclient>=2.2.0
 # Optional/third-party (install as needed for full AI features):
 # crewai, crewai-tools, langchain-google-genai (these may be private or custom packages)
 # The following packages are optional and required only for the real AI/agent flow
